install webpack packages

--- a/package.json
+++ b/package.json
@@ -1,3 +1,11 @@
 {
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.21.0",
+    "pug": "^2.0.0-beta3",
+    "pug-html-loader": "^1.0.8",
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1"
+  }
 }
