--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "pug-html-loader": "^1.0.8",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1"
+  },
+  "scripts": {
+    "build": "webpack --optimize-minimize --display-error-details"
   }
 }
