--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "webpack": "^1.13.1"
   },
   "dependencies": {
+    "fastclick": "^1.0.6",
     "viewport-units-buggyfill": "^0.6.0"
   },
   "scripts": {
