--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "fastclick": "^1.0.6",
+    "sanitize.css": "^4.0.0",
     "viewport-units-buggyfill": "^0.6.0"
   },
   "scripts": {
